scss/common/_user-badge.scss
.badge-card {
  @extend %card;

  margin-right: 0;
  margin-bottom: $card-margin-y;

  &,
  &.large,
  &.medium {
    width: 100%;

    @media (min-width: 569px) {
      margin-right: $card-margin-x;
      width: calc(50% - #{$card-margin-x});
    }

    @media (min-width: ($container-max-width + 1px)) {
      width: calc(100% / 3 - #{$card-margin-x});
    }
  }

  .badge-contents {
    min-height: 0;

    .badge-icon {
      @extend %card-block;
      @extend %typography-h2;

      background-color: color-chooser($card-child-bg-dark, $card-child-bg-light);
      min-width: ($card-padding-x * 2 + $font-size-h1 / $font-size-base * $material-icon-size);
    }

    .badge-info {
      @extend %card-block;

      min-width: 0;

      h3 {
        @extend %typography-h5;

        margin-bottom: ($card-inner-spacer-y / 2);
      }
    }

    .badge-info-item {
      flex-grow: 1;
      min-width: 0;
    }
  }

  .check-display {
    align-items: center;
    border-radius: ($material-icon-size / 2);
    display: flex;
    font-size: $font-size-base;
    height: $material-icon-size;
    justify-content: center;
    top: ($card-padding-y / 2);
    right: ($card-padding-x / 2);
    width: $material-icon-size;
  }

  .grant-count {
    font-size: $font-size-base;
    line-height: 1;
    top: ($card-padding-y / 2);
    right: ($card-padding-x / 2);
  }
}

.badge-grouping {
  margin-bottom: ($spacer-lg - $card-margin-y);

  @media (min-width: 569px) {
    display: flex;
    flex-wrap: wrap;
    margin-right: ($card-margin-x * -1);
  }

  h3 {
    margin-bottom: $card-margin-y;
  }

  .title {
    width: 100%;
  }
}

.badge-groups {
  margin: 0;
}

.badges-section {
  margin-bottom: $spacer-lg;

  @media (min-width: 569px) {
    margin-right: ($card-margin-x * -1);
  }

  &.top-section {
    > p {
      &:last-child {
        margin-bottom: 0;
      }

      .more {
        @extend %btn-flat;
        @extend %btn-raised;
      }
    }
  }

  > h3,
  > p {
    width: 100%;
  }
}

.show-badge {
  h1 {
    margin-bottom: $spacer-lg;
  }
}

.show-badge-details {
  display: block;
  margin-top: 0;
  margin-bottom: ($spacer-lg - $card-margin-y);

  @media (min-width: 569px) {
    display: flex;
    flex-wrap: wrap;
    margin-right: ($card-margin-x * -1);
  }

  .badge-grant-info {
    margin-left: $spacer-lg;
  }

  .grant-info-item {
    margin-bottom: $card-margin-y;
  }
}

.user-badges {
  margin-bottom: $spacer-lg;

  > .ember-view {
    margin-bottom: ($spacer-lg - $card-margin-y);

    @media (min-width: 569px) {
      display: flex;
      flex-wrap: wrap;
      margin-right: ($card-margin-x * -1);
    }
  }
}

.user-badges-list {
  @media (min-width: 569px) {
    display: flex;
    flex-wrap: wrap;
    margin-right: ($card-margin-x * -1);

    .badge-card {
      margin-right: $card-margin-x;
      width: calc(50% - #{$card-margin-x});
    }
  }

  @media (min-width: ($container-max-width + 1)) {
    .badge-card {
      width: calc(100% / 3 - #{$card-margin-x});
    }
  }

  .user-main &.user-content {
    margin-bottom: ($spacer-lg - $card-margin-y);
  }
}

.user-info {
  @extend %card;
  @extend %card-block;

  display: flex;
  margin-bottom: $card-margin-y;

  &,
  &.large,
  &.medium,
  &.small {
    min-height: 0;
    width: 100%;

    @media (min-width: 569px) {
      margin-right: $card-margin-x;
      width: calc(50% - #{$card-margin-x});
    }

    @media (min-width: ($container-max-width + 1px)) {
      width: calc(100% / 3 - #{$card-margin-x});
    }

    &.badge-info {
      min-height: 0;
    }

    .user-detail {
      width: auto;
    }

    .user-image {
      width: auto;
    }
  }

  .avatar {
    height: ($font-size-base * $line-height-base * 2);
    width: ($font-size-base * $line-height-base * 2);
  }

  .user-detail {
    font-size: inherit;
    padding-left: 0;

    .title {
      margin-top: 0;
    }
  }

  .user-image {
    margin-right: $card-inner-spacer-x;
    padding-right: 0;
  }
}

